# job-agent

./: .env.example  .gitignore  README.md  TODO.md  codex_todo_agentic_application_manager_updated.md  job_test.txt  pyproject.toml
Todo/: TODO_CODEX_BUILD_JOB_AGENT.md
Todo/done/: TODO_CODEX_BUILD_JOB_AGENT_AUTH_BROWSER.md  TODO_CODEX_SOURCE_URL_IMPORT.md
app/: __init__.py  cli.py  config.py  logging_config.py  main.py  safety.py
app/agents/: application_planner.py  cover_letter_writer.py  cv_tailor.py  form_answer_writer.py  interview_prep.py  job_parser.py  reviewer.py
app/models/: __init__.py  application.py  application_answer.py  candidate_profile.py  generated_document.py  job.py  job_parser.py  model_usage.py  profile.py  status.py
app/prompts/: application_answers.md  application_form_answer.md  application_planner.md  cover_letter.md  cv_tailor.md  fit_score.md  follow_up_email.md  interview_prep.md  job_parser.md  no_fabrication_reviewer.md  reviewer.md
app/services/: application_service.py  ats_detector_service.py  auth_session_service.py  browser_service.py  daily_summary_service.py  database.py  folder_service.py  form_field_detector.py  job_input_service.py  latex_service.py  model_provider.py  preparation_service.py  prompt_loader.py  scoring_service.py  source_detection.py  storage_service.py
app/services/providers/: __init__.py  lmstudio_provider.py  ollama_provider.py  openai_provider.py
app/templates/: application_detail.html  applications.html  base.html  cover_letter.md.j2  dashboard.html
app/templates/partials/: application_table.html
app/tests/: test_approval_and_fields.py  test_auth_and_dashboard.py  test_browser_assist_safety.py  test_job_input_and_folder.py  test_jobs_and_doctor.py  test_model_provider_prompt.py  test_models.py  test_parser_scoring_answers.py  test_preparation_flow.py  test_profile_storage.py  test_source_url_import.py
drafts/: README.md
storage/: job_agent.db
storage/applications/2026-06-21/acme-role-python-developer-location-remo_unknown-role_remote/: audit_log.md  metadata.json
storage/applications/2026-06-21/acme-role-python-developer-location-remo_unknown-role_remote_002/: audit_log.md  metadata.json
storage/applications/2026-06-21/acme-role-python-developer-location-remo_unknown-role_remote_003/: audit_log.md  metadata.json
storage/applications/2026-06-21/acme-role-python-developer-location-remo_unknown-role_remote_004/: audit_log.md  metadata.json
storage/applications/2026-06-21/unknown-company_unknown-role_unspecified/: audit_log.md  metadata.json
storage/applications/2026-06-21/unknown-company_unknown-role_unspecified_002/: audit_log.md  metadata.json
storage/applications/2026-06-21/unknown-company_unknown-role_unspecified_003/: audit_log.md  metadata.json
storage/applications/2026-06-21/unknown-company_unknown-role_unspecified_004/: audit_log.md  metadata.json
storage/master_cv/: master-cv.tex
storage/profile/: answer_bank.example.json  answer_bank.json  documents.example.json  documents.json  facts.example.json  facts.json  links.example.json  links.json  preferences.example.json  preferences.json  profile.example.json  profile.json  sensitive_answers.example.json  sensitive_answers.json.example
(+19 files in other folders)
