[project]
authors = [{name = "erfanhresh", email = "erfan_bcln@yahoo.com"}]
dependencies = [
  "beautifulsoup4",
  "fastapi",
  "httpx",
  "jinja2",
  "markdown",
  "ollama",
  "openai",
  "playwright",
  "pydantic",
  "pydantic-settings",
  "pypdf",
  "python-dotenv",
  "rich",
  "sqlalchemy",
  "sqlmodel",
  "typer",
  "uvicorn",
  "weasyprint",
]
name = "agentic-application-manager"
requires-python = ">= 3.12"
version = "0.1.0"

[project.scripts]
jobagent = "app.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
agentic_application_manager = { path = ".", editable = true }

[tool.pixi.tasks]
jobagent = "python -m app.cli"
test = "pytest"
lint = "ruff check ."
typecheck = "mypy app"
serve = "uvicorn app.main:app --reload"

[tool.pixi.dependencies]
python = ">=3.12"
fastapi = ">=0.138.0,<0.139"
uvicorn = ">=0.49.0,<0.50"
typer = ">=0.26.7,<0.27"
rich = ">=15.0.0,<16"
pydantic = ">=2.13.4,<3"
sqlmodel = ">=0.0.38,<0.0.39"
sqlalchemy = ">=2.0.51,<3"
jinja2 = ">=3.1.6,<4"
python-dotenv = ">=1.2.2,<2"
playwright = ">=1.61.0,<2"
pytest = ">=9.1.1,<10"
ruff = ">=0.15.18,<0.16"
mypy = ">=2.1.0,<3"
tectonic = ">=0.16.9,<0.17"
pydantic-settings = ">=2.14.2,<3"
ollama = ">=0.24.0,<0.25"
openai = ">=2.43.0,<3"
httpx = ">=0.28.1,<0.29"
beautifulsoup4 = ">=4.15.0,<5"
markdown = ">=3.10.2,<4"
pytest-asyncio = ">=1.4.0,<2"
weasyprint = ">=69.0,<70"
pypdf = ">=6.13.3,<7"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
